--- a/products_details.html
+++ b/products_details.html
@@ -123,7 +123,7 @@
                             <img class="slick__item--img" src="img/bottlesmall.jpg" alt="">
                             <div class="slick__item--info">
                                 <ul>
-                                    <li><img src="img/sugar.svg" alt=""><span class="substance">Сахар:</span><span class="weight">0,8g</span></li>
+                                    <li><img src="img/sugar-01.svg" alt=""><span class="substance">Сахар:</span><span class="weight">0,8g</span></li>
                                     <li><img src="img/champagne.svg" alt=""><span class="substance">Алкоголь:</span><span class="weight">  40% об.</span></li>
                                     <li><img src="img/shake.svg" alt=""><span class="substance">Вкус:</span><span class="weight">Полусладкое</span></li>
                                 </ul>
@@ -133,7 +133,7 @@
                             <img class="slick__item--img" src="img/bottlesmall.jpg" alt="">
                             <div class="slick__item--info">
                                 <ul>
-                                    <li><img src="img/sugar.svg" alt=""><span class="substance">Сахар:</span><span class="weight">0,8g</span></li>
+                                    <li><img src="img/sugar-01.svg" alt=""><span class="substance">Сахар:</span><span class="weight">0,8g</span></li>
                                     <li><img src="img/champagne.svg" alt=""><span class="substance">Алкоголь:</span><span class="weight">  40% об.</span></li>
                                     <li><img src="img/shake.svg" alt=""><span class="substance">Вкус:</span><span class="weight">Полусладкое</span></li>
                                 </ul>
@@ -143,7 +143,7 @@
                             <img class="slick__item--img" src="img/bottlesmall.jpg" alt="">
                             <div class="slick__item--info">
                                 <ul>
-                                    <li><img src="img/sugar.svg" alt=""><span class="substance">Сахар:</span><span class="weight">0,8g</span></li>
+                                    <li><img src="img/sugar-01.svg" alt=""><span class="substance">Сахар:</span><span class="weight">0,8g</span></li>
                                     <li><img src="img/champagne.svg" alt=""><span class="substance">Алкоголь:</span><span class="weight">  40% об.</span></li>
                                     <li><img src="img/shake.svg" alt=""><span class="substance">Вкус:</span><span class="weight">Полусладкое</span></li>
                                 </ul>
@@ -153,7 +153,7 @@
                                 <img class="slick__item--img" src="img/bottlesmall.jpg" alt="">
                                 <div class="slick__item--info">
                                     <ul>
-                                        <li><img src="img/sugar.svg" alt=""><span class="substance">Сахар:</span><span class="weight">0,8g</span></li>
+                                        <li><img src="img/sugar-01.svg" alt=""><span class="substance">Сахар:</span><span class="weight">0,8g</span></li>
                                         <li><img src="img/champagne.svg" alt=""><span class="substance">Алкоголь:</span><span class="weight">  40% об.</span></li>
                                         <li><img src="img/shake.svg" alt=""><span class="substance">Вкус:</span><span class="weight">Полусладкое</span></li>
                                     </ul>
