--- a/products.html
+++ b/products.html
@@ -101,43 +101,43 @@
         <div class="container">
             <div class="title">Собственные ТМ</div>
             <div class="tm-list">
-                <div class="tm-list__item"><img src="img/own1.jpg" alt=""></div>
-                <div class="tm-list__item">
+                <div class="tm-list__item tm-list__item--img"><img src="img/own1.jpg" alt=""></div>
+                <div class="tm-list__item tm-list__item--label-big">
                     <a href="products_details.html"></a>
                     <div class="tm-list__item--text">
                         <img src="img/aznauri-logosmall.png" alt=""> <span>   ТМ АЗНАУРИ</span>
                     </div>
                 </div>
-                <div class="tm-list__item"><img src="img/own2.jpg" alt=""></div>
-                <div class="tm-list__item">
+                <div class="tm-list__item tm-list__item--img"><img src="img/own2.jpg" alt=""></div>
+                <div class="tm-list__item tm-list__item--label-small">
                      <a href="products_details.html"></a>
                     <div class="tm-list__item--text">
                         <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
                     </div>
                 </div>
-                <div class="tm-list__item">
+                <div class="tm-list__item tm-list__item--label-small">
                      <a href="products_details.html"></a>
                     <div class="tm-list__item--text">
                         <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
                     </div>
                 </div>
-                <div class="tm-list__item"><img src="img/own3.jpg" alt=""></div>
-                <div class="tm-list__item">
+                <div class="tm-list__item tm-list__item--img"><img src="img/own3.jpg" alt=""></div>
+                <div class="tm-list__item tm-list__item--label-big">
                      <a href="products_details.html"></a>
                     <div class="tm-list__item--text">
                         <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
                     </div>
                 </div>
-                <div class="tm-list__item"><img src="img/own4.jpg" alt=""></div>
-                <div class="tm-list__item"><img src="img/own5.jpg" alt=""></div>
-                <div class="tm-list__item">
+                <div class="tm-list__item tm-list__item--img"><img src="img/own4.jpg" alt=""></div>
+                <div class="tm-list__item tm-list__item--img"><img src="img/own5.jpg" alt=""></div>
+                <div class="tm-list__item tm-list__item--label-big">
                      <a href="products_details.html"></a>
                     <div class="tm-list__item--text">
                         <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
                     </div>
                 </div>
                 <div class="tm-list__item"><img src="img/own6.jpg" alt=""></div>
-                <div class="tm-list__item">
+                <div class="tm-list__item tm-list__item--label-small">
                      <a href="products_details.html"></a>
                     <div class="tm-list__item--text">
                         <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
