--- a/about.html
+++ b/about.html
@@ -160,7 +160,7 @@
         <div class="visia">
             <div class="container">
                 <div class="title title-visia">Визия</div>
-                <div class="visia__image">
+                <div class="visia__image" data-animate>
                     <img src="img/shutterstock.jpg" alt="">
                 </div>
                 <div class="visia__text">
