--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
 
     <main class="home-page">
 
-        <div class="header-image"></div>
+        <div class="header-image">
+            <div class="main-slider">
+                
+            </div>
+        </div>
         <div class="header-description">
             <div class="container">
                 <div class="header-description__subtitle">
